--- a/Buoi1/bai1.html
+++ b/Buoi1/bai1.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	    <title>Buổi 1 - Bài 1</title>
 		<style>
 		
 		html,body{
 			font-family:Verdana,sans-serif;
 			font-size:14px;
 			align:center;
+			background-color: White;
 		}	
 	
 		th {
 			text-align:center;
-			<!-- font-family:arial; -->
+
 			font-size:14px;
 			width: 130px;
 		}
 
 		td {
 			text-align:center;
-			<!-- font-family:arial; -->
+
 			font-size:13px;
 			width: 130px;
 		}
