Add link to Buoi2/div.html in index

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <td>Lịch làm việc</td>
          </tr>
          <tr>
-            <td><a href="/index.html">Bài 2</a></td>
+            <td><a href="/Buoi2/div.html">Bài 2</a></td>
             <td>Định dạng trang web</td>
          </tr>
          <tr>
