--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
       <table border=1 align="center">
          <tr>
             <th rowspan="3">Buổi 1 - HTML</th>
-            <td><a href="/Buoi1/bai1.html">Bài 1</a></td>
+            <td><a href="/Buoi_1/bai1.html">Bài 1</a></td>
             <td>Lịch làm việc</td>
          </tr>
          <tr>
-            <td><a href="/Buoi1/bai2.html">Bài 2</a></td>
+            <td><a href="/Buoi_1/bai2.html">Bài 2</a></td>
             <td>Form đăng ký</td>
          </tr>
          <tr>
