--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
       <table border=1 align="center">
          <tr>
             <th rowspan="3">Buổi 1 - HTML</th>
-            <td><a href="/Buoi_1/bai1.html">Bài 1</a></td>
+            <td><a href="Buoi1/bai1.html">Bài 1</a></td>
             <td>Lịch làm việc</td>
          </tr>
          <tr>
-            <td><a href="/Buoi_1/bai2.html">Bài 2</a></td>
+            <td><a href="Buoi1/bai2.html">Bài 2</a></td>
             <td>Form đăng ký</td>
          </tr>
          <tr>
@@ -75,11 +75,11 @@
          </tr>
          <tr>
             <th rowspan="3">Buổi 2 - CSS</th>
-            <td><a href="/Buoi2/bai1.html">Bài 1</a></td>
+            <td><a href="Buoi2/bai1.html">Bài 1</a></td>
             <td>Lịch làm việc</td>
          </tr>
          <tr>
-            <td><a href="/Buoi2/div.html">Bài 2</a></td>
+            <td><a href="Buoi2/div.html">Bài 2</a></td>
             <td>Định dạng trang web</td>
          </tr>
          <tr>
