--- a/index2.html
+++ b/index2.html
@@ -15,8 +15,8 @@
 		<ul>
 			<li><a href="#">Buổi 1</a>
 				<ul>
-					<li><a href="#">Bài 1</a></li>
-					<li><a href="#">Bài 2</a></li>
+					<li><a href="Buoi1/bai1.html">Bài 1</a></li>
+					<li><a href="Buoi1/bai2.html">Bài 2</a></li>
 					<li><a href="#">Bài 3</a></li>
 					<li><a href="#">Bài 4</a></li>
 				</ul>
@@ -57,8 +57,8 @@
 		<p>Riêng bài tập buổi 2, Cô chấm trực tiếp trên lớp bài 1, 2, 3. Bài 3 chính là trang này. Bài 1 và bài 2 các em có thể để liên kết ở đây.</p>
 
 		<ul>
-			<li><a href="#">Bài 1, buổi 2</a></li>
-			<li><a href="#">Bài 2, buổi 2</a></li>
+			<li><a href="Buoi1/bai2.html">Bài 1, buổi 2</a></li>
+			<li><a href="Buoi2/div.html">Bài 2, buổi 2</a></li>
 		</ul>
 
 		<p>Nội dung bài 4, buổi 2 sẽ thay thế 4 trang của buổi 1. Cô đã chấm bài tập Buổi 1 xong.</p>
